Update DB_PATH environment variable in workflow

--- a/.github/workflows/manual-task.yml
+++ b/.github/workflows/manual-task.yml
@@ -33,6 +33,6 @@ jobs:
             docker run --rm \
               -v "$PWD":/app \
               -w /app \
-              -e DB_PATH=./worktrack.db \
+              -e DB_PATH=/app/data/worktrack.db \
               golang:1.25 \
               go run ./cmd/manual-task --dry-run=${{ inputs.dry_run }}
